[gd_scene load_steps=3 format=3 uid="uid://p85hjfx8p8gl"]

[ext_resource type="Script" uid="uid://buqdhgyny8i5m" path="res://Scripts/player_house.gd" id="1_mjjt1"]

[sub_resource type="SphereShape3D" id="SphereShape3D_5p25j"]

[node name="player_house" type="Area3D"]
script = ExtResource("1_mjjt1")
metadata/_custom_type_script = "uid://5kdjfly1rovr"

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("SphereShape3D_5p25j")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
